// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main finds assets if no code passed 1`] = `
[
  {
    "code": "<svg>mock</svg>",
    "state": {
      "assets/componentFiles": {},
      "componentName": "mockIcon",
      "filePath": "assets/mock.icon.svg",
      "github/diffType": "added",
    },
  },
]
`;

exports[`main writes component files when code passed 1`] = `
{
  "code": "
import React from 'react'
export default function mockIcon() {
    return <svg>mock updated</svg>
}
",
  "state": {
    "assets/componentFiles": {
      "README.md": "## mockIcon

mock usage notes",
    },
    "componentName": "mockIcon",
    "filePath": "assets/mock.icon.svg",
    "github/diffType": "added",
  },
}
`;
